--- a/client/caps-web/src/Components/footer.css
+++ b/client/caps-web/src/Components/footer.css
@@ -13,3 +13,9 @@
     box-shadow: 0 10px 12px rgba(0, 0, 0, 0.9);
 
 }
+@media (max-width: 768px) {
+    .footer {
+        flex-direction: column;
+        text-align: center;
+    }
+}
