--- a/client/caps-web/src/Components/cardsection.css
+++ b/client/caps-web/src/Components/cardsection.css
@@ -1,6 +1,6 @@
 .cards-section {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 30px;
     padding: 40px;
     background-color:#3D52A0;
@@ -14,4 +14,9 @@ h2
     color:black;
     margin: 10px 0;
     margin-top: 100px;
+}
+@media (max-width: 768px) {
+    .cards-section {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
 }
