--- a/client/caps-web/src/Components/events.css
+++ b/client/caps-web/src/Components/events.css
@@ -6,6 +6,8 @@
     margin-top: 70px;
     box-shadow: 0 10px 12px rgba(0, 0, 0, 0.9);
     height: 700px;
+    background-color: rgb(217, 220, 250);
+    border: 3px solid #5888bc;
   }
   
   .buttons {
@@ -22,6 +24,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    border: 1px solid #1d2d3d;
   }
   
   .buttons button.active,
@@ -39,12 +42,13 @@
     width: 300px;
     height: 400px;
     border-radius: 10px;
-
+    
   }
   
   .carousel-item p {
     margin-top: 10px;
     font-size: 18px;
+    
   }
   @media (max-width: 768px) {
     .carousel img {
