--- a/client/caps-web/src/Components/signupmodal.css
+++ b/client/caps-web/src/Components/signupmodal.css
@@ -30,6 +30,7 @@
     position: absolute;
     top: 10px;
     right: 15px;
+    color: rgb(210, 210, 210);
     background: #526fd5;
     border-color: #333;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
@@ -37,7 +38,7 @@
     cursor: pointer;
 }
 .close-button:hover {
-    background: #d22323;
+    background: #30407c;
 }
 
 .signup-form label {
